--- a/settings.gradle
+++ b/settings.gradle
@@ -3,17 +3,17 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
-        maven { url 'https://jitpack.io' } // ← اضافه شد
+        maven { url 'https://jitpack.io' }
     }
 }
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
         gradlePluginPortal()
-        maven { url 'https://jitpack.io' } // ← اضافه شد
+        maven { url 'https://jitpack.io' }
     }
 }
 
