--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'com.github.mohamad-amin:PersianMaterialDateTimePicker:1.2.1'
+    implementation 'com.github.mohamad-amin:PersianMaterialDateTimePicker:v1.2.1'
+
 
 }
