--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,13 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
-    implementation 'com.github.samanzamani:PersianDate:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'com.github.mohamad-amin:PersianMaterialDateTimePicker:v1.2.1'
 
+    // ✅ تقویم شمسی جدید و فعال از JitPack
+    implementation 'com.github.aliab:Persian-Date-Picker-Dialog:1.8.0'
 
+    // 📅 کتابخانه تاریخ فارسی برای فرمت‌دهی تاریخ‌ها
+    implementation 'com.github.samanzamani:PersianDate:1.5.0'
 }
