--- a/build.gradle
+++ b/build.gradle
@@ -6,3 +6,12 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// ✅ اضافه‌شده برای اطمینان از شناسایی JitPack
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' } // ← مخزن JitPack برای کتابخانه تقویم شمسی
+    }
+}
