--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ android {
         jvmTarget = "17"
     }
 
-    // ✅ فعال کردن ViewBinding برای حل خطای ActivityAddTransactionBinding
     buildFeatures {
         viewBinding true
     }
@@ -48,6 +47,12 @@ android {
     }
 }
 
+repositories {
+    google()
+    mavenCentral()
+    maven { url 'https://jitpack.io' } // ✅ اضافه شد تا کتابخانه تقویم شمسی پیدا بشه
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -56,7 +61,6 @@ dependencies {
 
     // ✅ تقویم شمسی جدید و فعال از JitPack
     implementation 'com.github.aliab:Persian-Date-Picker-Dialog:1.7.1'
-
 
     // 📅 کتابخانه تاریخ فارسی برای فرمت‌دهی تاریخ‌ها
     implementation 'com.github.samanzamani:PersianDate:1.5.0'
