--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
         jvmTarget = '17'
     }
+}
+
+repositories {
+    google()
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -36,6 +43,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    // تاریخ شمسی (PersianDate)
+    // PersianDate library (از jitpack)
     implementation 'com.github.samanzamani:PersianDate:1.5.0'
 }
