--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation files('libs/persiandate-1.7.1.jar')
+
 
     // ✅ استفاده از فایل JAR محلی
     implementation files('libs/PersianDate-1.5.0.jar')
