--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation files('libs/persiandate-1.7.1.jar')
+    implementation files('libs/PersianDate.jar')
+
 
 
     // ✅ استفاده از فایل JAR محلی
