--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -40,11 +41,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation files('libs/persiandate-1.7.1.jar')
-    implementation files('libs/PersianDate.jar')
 
-
-
-    // ✅ استفاده از فایل JAR محلی
-    implementation files('libs/PersianDate-1.5.0.jar')
+    // بدون JitPack — PersianDate به صورت سورس در مسیر app/src/main/java قرار دارد
 }
