--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'org.hesab.app'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "org.hesab.app"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -37,10 +37,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    // کتابخانه‌های اصلی اندروید
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
 
-    // بدون JitPack — PersianDate به صورت سورس در مسیر app/src/main/java قرار دارد
+    // PersianDate به صورت سورس داخل پروژه موجود است
 }
