--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     // کتابخانه‌های اصلی اندروید
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.google.android.material:material:1.13.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
 
     // PersianDate به صورت سورس داخل پروژه موجود است
