--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
+
 
 android {
     namespace 'org.hesab.app'
@@ -42,6 +44,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+
+    // Room Database
+implementation "androidx.room:room-runtime:2.5.2"
+kapt "androidx.room:room-compiler:2.5.2"
+implementation "androidx.room:room-ktx:2.5.2"
+
 
     // PersianDate به صورت سورس داخل پروژه موجود است
 }
