--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.hesab.app">
 
     <application
         android:allowBackup="true"
@@ -9,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
+        <!-- اکتیویتی اصلی -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -19,6 +21,9 @@
             </intent-filter>
 
         </activity>
+
+        <!-- ✅ اکتیویتی افزودن تراکنش -->
+        <activity android:name=".AddTransactionActivity" />
 
     </application>
 
