--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <!-- اکتیویتی اصلی -->
+        <activity
+            android:name=".AddTransactionActivity"
+            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -19,9 +22,5 @@
             </intent-filter>
         </activity>
 
-        <!-- ✅ اکتیویتی افزودن تراکنش -->
-        <activity android:name=".AddTransactionActivity" />
-
     </application>
-
 </manifest>
