--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,4 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-
-      - name: Set up Gradle
-        uses: gradle/wrapper-validation-action@v1
-      
-      - name: Build with Gradle
-        run: ./gradlew assembleDebug
+          java-ve
