--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.hesab.app">  <!-- این باید حذف شود -->
 
     <!-- دسترسی‌های لازم -->
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
@@ -15,7 +16,9 @@
 
         <activity android:name=".AddTransactionActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".MainActivity">
+        
+        <activity android:name=".MainActivity" 
+            android:exported="true">  <!-- اضافه کردن این خط -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -25,7 +28,8 @@
         <!-- گیرنده پیامک بانکی -->
         <receiver
             android:name=".SmsReceiver"
-            android:permission="android.permission.BROADCAST_SMS">
+            android:permission="android.permission.BROADCAST_SMS"
+            android:exported="true">  <!-- اضافه کردن این خط -->
             <intent-filter android:priority="999">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
