--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,14 @@
         android:name=".App"
         android:allowBackup="true"
         android:label="حساب"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.Hesab.LightBlue"
-        android:supportsRtl="true"
-                >
+        android:supportsRtl="true">
+
         <activity android:name=".AddTransactionActivity" />
         <activity android:name=".SettingsActivity" />
-        
+
         <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,5 +34,6 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
     </application>
 </manifest>
